Fixed issue #17: copy overlapping duck image on meetings page.

--- a/wordpress/wp-content/themes/rare/style.css
+++ b/wordpress/wp-content/themes/rare/style.css
@@ -305,7 +305,7 @@ body.page-id-11 .body_block{
 /* meetings page layout, page id 44 */
 body.page-id-44 .body_block{
     background: #e8e7e0 url(ui/meetings_bg.jpg) bottom no-repeat;
-    padding-bottom: 400px;
+    padding-bottom: 530px;
 }
 body.page-id-44 .tedx-box{
     background: #fff;
